CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECTNAME MOTION_HEAD)

PROJECT(${PROJECTNAME})

FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE(YARP)
FIND_PACKAGE(ICUB)

SET(folder_source main.cpp)

SOURCE_GROUP("Source Files" FILES ${folder_source})

LINK_DIRECTORIES(${OPENCV_LINK_DIRECTORIES})
LINK_LIBRARIES(${OPENCV_LIBS})

INCLUDE_DIRECTORIES(${ICUB_INCLUDE_DIRS} ${YARP_INCLUDE_DIRS})
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ICUB_LINK_FLAGS}")
ADD_EXECUTABLE(${PROJECTNAME} ${folder_source})
TARGET_LINK_LIBRARIES(${PROJECTNAME} icubmod ${YARP_LIBRARIES} ${OpenCV_LIBS})
INSTALL(TARGETS ${PROJECTNAME} DESTINATION $ENV{CHRIS_ROOT}/bin)

